--- a/loginServer/pom.xml
+++ b/loginServer/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>loginServer</name>
-	<description>Springboot redux login</description>
+	<description>Springboot otp service</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -48,8 +48,8 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-rest</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
