rabbitmq settings are made.

--- a/loginServer/src/main/resources/application.yml
+++ b/loginServer/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server: 
-  port: ${PORT:${SERVER_PORT:0}}   # Select any available port if neither port nor server port are specified. 
+  port: 8081
 spring: 
   rabbitmq:
     host: localhost
