--- a/tokenservice/src/main/resources/application.yml
+++ b/tokenservice/src/main/resources/application.yml
@@ -1,2 +1,2 @@
 server: 
-  port: ${PORT:${SERVER_PORT:0}}   # Select any available port if neither port nor server port are specified. 
+  port: 8083
