--- a/loginServer/src/main/resources/application.yml
+++ b/loginServer/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
     port: 5672
     username: guest
     password: guest
+  data:
+    mongodb:
+      database: local
+      host: localhost
+      port: 27017
